# cinelingo

./: .gitignore  API.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: copy-libmpv.mjs  libmpv-manifest.mjs  onnxruntime-manifest.mjs  set-version.mjs  setup-libmpv.mjs  setup-onnxruntime.mjs
src/: App.vue  mpv.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shaders/: blur.glsl
src-tauri/src/: fsutil.rs  lib.rs  playback_memory.rs  recent.rs  settings.rs  sub_memory.rs
src-tauri/src/capture/: loopback.rs  mod.rs  sessions.rs  source.rs
src-tauri/src/subs/: audio.rs  cache.rs  cue.rs  download.rs  hallucination.rs  hwdetect.rs  merge.rs  mod.rs  plan.rs  remote.rs  session.rs  sidecar.rs  silero.rs  stream.rs  vad.rs  whisper.rs
src-tauri/src/subs/translate/: llama.rs  local.rs  mod.rs
src/__tests__/: autohide.test.ts  ccDependency.test.ts  ccMode.test.ts  decideTranslateEnable.test.ts  distinctTargets.test.ts  drop.test.ts  floatingLayout.test.ts  format.test.ts  hasWhisperModel.test.ts  liveBlocks.test.ts  liveLines-pick.test.ts  mergeCachedTranslations.test.ts  pickCueText.test.ts  quality.test.ts  remoteUrl.test.ts  resize.test.ts  seek.test.ts  selectUpcomingUntranslated.test.ts  settings.test.ts  shouldTranslateTrack.test.ts  startForCurrentGuard.test.ts  subMemory.test.ts  subtitles.test.ts  transHintText.test.ts  useFloatingMode.test.ts  useQueue.test.ts  useRecent.test.ts  volume.test.ts  windowIcons.test.ts
src/components/: AdjustPanel.vue  AudioSourcePanel.vue  AudioVisualizer.vue  ControlBar.vue  EngineProvisionDialog.vue  FloatingCaptions.vue  GlassSelect.vue  GlassToggle.vue  LoadingOverlay.vue  MicButton.vue  PlayerIcon.vue  QueuePanel.vue  ResizeHandles.vue  SeekBar.vue  SettingsModal.vue  SidePanel.vue  SubtitleControls.vue  SubtitleOverlay.vue  TitleBar.vue  TranslateProvisionDialog.vue  VolumeControl.vue
src/components/adjust/: AudioDelayScreen.vue  AudioSourceScreen.vue  EqScreen.vue  ImageScreen.vue  NormalizeScreen.vue  QualityScreen.vue  (+3 more)
src/player/: audioAf.test.ts  audioAf.ts  autohide.ts  backend.ts  ccRestore.test.ts  ccRestore.ts  floatingLayout.ts  format.ts  langs.test.ts  langs.ts  modelRows.test.ts  modelRows.ts  path.ts  playbackMemory.test.ts  playbackMemory.ts  provision.test.ts  provision.ts  quality.ts  queueTypes.ts  recentTypes.ts  remoteUrl.ts  resize.ts  seek.ts  settings.ts  subMemory.test.ts  subMemory.ts  subtitles.ts  useAudioAdjust.ts  useAudioSource.test.ts  useAudioSource.ts  useAutoHide.ts  useCaptureProvision.ts  useEngineProvision.ts  useFloatingMode.ts  useKeyboard.ts  useModelDownloads.ts  usePasteUrl.ts  usePlayer.test.ts  usePlayer.ts  useQueue.ts  (+9 more)
(+7 files in other folders)
