[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-libmpv = "0.3.2"
tauri-plugin-dialog = "2"

# P3 字幕後端
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "fs", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
sha2 = "0.10"
zip = "2"
wgpu = "22"
futures-util = "0.3"
rubato = "0.16"
wasapi = "0.19"
png = "0.17"
base64 = "0.22"
windows = { version = "0.61", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading", "Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem"] }
async-trait = "0.1.89"

# Phase 0 spike — Silero VAD（Task 1；go/no-go gate）
voice_activity_detector = { version = "0.2", features = ["load-dynamic"] }
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
